@@ -271,10 +271,9 @@ test("attributes", function() {
 	t("Empty values", "#select1 option[value='']", ["option1a"]);
 	t("Empty values", "#select1 option[value!='']", ["option1b","option1c","option1d"]);
 	
-	// Replace :selected with :checked (jddalton)
-	t("Select options via :checked", "#select1 option:checked", ["option1a"] );
-	t("Select options via :checked", "#select2 option:checked", ["option2d"] );
-	t("Select options via :checked", "#select3 option:checked", ["option3b", "option3c"] );
+	t("Select options via :selected", "#select1 option:selected", ["option1a"] );
+	t("Select options via :selected", "#select2 option:selected", ["option2d"] );
+	t("Select options via :selected", "#select3 option:selected", ["option3b", "option3c"] );
 	
 	t( "Grouped Form Elements", "input[name='foo[bar]']", ["hidden2"] );
 });
@@ -342,15 +341,12 @@ test("pseudo - misc", function() {
 test("pseudo - :not", function() {
 	expect(25);
 	t( "Not", "a.blog:not(.link)", ["mark"] );
-	
-	// Replaced :selected with :checked (jddalton)
-	t( "Not - multiple", "#form option:not(:contains('Nothing'),#option1b,:checked)", ["option1c", "option1d", "option2b", "option2c", "option3d", "option3e"] );
+	t( "Not - multiple", "#form option:not(:contains('Nothing'),#option1b,:selected)", ["option1c", "option1d", "option2b", "option2c", "option3d", "option3e"] );
 
-	// Fixed incorrect expected results (jddalton)
+	// Modified to fix incorrect expected results (jddalton)
 	t( "Not - complex", "#form option:not([id^='opt']:nth-child(-n+3))", ["option1d", "option2d", "option3d", "option3e"] );
 
-	// Replaced :selected with :checked (jddalton)
-	t( "Not - recursive", "#form option:not(:not(:checked))[id^='option3']", [ "option3b", "option3c"] );
+	t( "Not - recursive", "#form option:not(:not(:selected))[id^='option3']", [ "option3b", "option3c"] );
 
 	t( ":not() failing interior", "p:not(.foo)", ["firstp","ap","sndp","en","sap","first"] );
 	t( ":not() failing interior", "p:not(div.foo)", ["firstp","ap","sndp","en","sap","first"] );
@@ -447,6 +443,5 @@ test("pseudo - form", function() {
 	t( "Form element :checkbox:checked", "#form :checkbox:checked", ["check1"] );
 	t( "Form element :radio:checked, :checkbox:checked", "#form :radio:checked, #form :checkbox:checked", ["radio2", "check1"] );
 
-	// Replaced :selected with :checked (jddalton)
-	t( "Selected Option Element", "#form option:checked", ["option1a","option2d","option3b","option3c"] );
+	t( "Selected Option Element", "#form option:selected", ["option1a","option2d","option3b","option3c"] );
 });
